--- a/vividtravel.html
+++ b/vividtravel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sld/slick.min.css">
+    <link rel="stylesheet" href="slick.min.css">
     <link rel="stylesheet" href="css/vividtravel.css">
     <link rel="stylesheet" href="tytyt.css">
     
@@ -89,8 +89,8 @@
 
 
     
-<script src="sld/jquery-2.2.4.min.js"></script>
-<script src="sld/slick.min.js"></script>
+<script src="jquery-2.2.4.min.js"></script>
+<script src="slick.min.js"></script>
 <script src="vividtravel.js"></script>
 </body>
 </html>
