--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="main-slider">
     <div class="item vimeo" data-video-start="4">
       <iframe class="embed-player slide-media" src="https://player.vimeo.com/video/217885864?api=1&byline=0&portrait=0&title=0&background=1&mute=1&loop=1&autoplay=0&id=217885864" width="980" height="520" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      <p class="caption">Отправим Вас <br>в любую точку планеты</p>
+      <p class="caption"></p>
     </div>
     <div class="item youtube">
       <iframe class="embed-player slide-media" width="980" height="520" src="https://www.youtube.com/embed/QV5EXOFcdrQ?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&playlist=QV5EXOFcdrQ&start=1" frameborder="0" allowfullscreen></iframe> 
