--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!---------------------------------------Сам контент сайта-------------------------------------------------------->
     
   <header class="bkghed">
-    <img class="loghed" src="img/logo.png">
+    <img class="loghed" src="logo.png">
     <nav class="ulnav">
       <ul>
         <li><a href="#">ГЛАВНАЯ</a></li>
