--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     color: rgb(255, 255, 255);
 }
 .actv {
-    background-image: url(img/knopok.png);
+    background-image: url(knopok.png);
     background-position: right 10px center;
     background-repeat: no-repeat;
     padding-right: 25px;
