--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <li><a href="#">ГЛАВНАЯ</a></li>
         <li class="cont"><a class='btr actv' href="#">ГОРЯЩИЕ ТУРЫ</a>
           <div class="turcont">
-            <a href="#"><img class="flg" src="flag/oae.jpeg">ОАЭ</a>
-            <a href="#"><img class="flg" src="flag/turkey.jpeg">ТУРЦИЯ</a>
-            <a href="#"><img class="flg" src="flag/egipet.jpeg">ЕГИПЕТ</a>
-            <a href="#"><img class="flg" src="flag/maldivy.png">МАЛЬДИВЫ</a>
+            <a href="#"><img class="flg" src="oae.jpeg">ОАЭ</a>
+            <a href="#"><img class="flg" src="turkey.jpeg">ТУРЦИЯ</a>
+            <a href="#"><img class="flg" src="egipet.jpeg">ЕГИПЕТ</a>
+            <a href="#"><img class="flg" src="maldivy.png">МАЛЬДИВЫ</a>
         </div>
         </li>
         <li class="cont"><a class='btr actv' href="#">СТРАНЫ</a>
