--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mobileDisplay.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/mobileDisplay.css">
     
     
     <title>Туристическое агенство</title>
@@ -428,9 +428,9 @@
   
   
 
-<script src="js/jquery.min.js"></script>
-<script src="js/TweenMax.js"></script>
-<script src="js/sait.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/TweenMax.js"></script>
+<script src="/js/sait.js"></script>
 
 </body>
 </html>
