--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
               </div>
               <div class="image-container"> 
-                <img src="/img/1.png" alt="" class="image">
+                <img src="img/1.png" alt="" class="image">
               </div>
             </div>
             <div class="slide">
@@ -203,7 +203,7 @@
                 </div>
               </div>
               <div class="image-container">
-                <img src="/img/2.png" alt="" class="image" />
+                <img src="img/2.png" alt="" class="image" />
               </div>
             </div>
             <div class="slide">
@@ -221,7 +221,7 @@
                 </div>
               </div>
               <div class="image-container">
-                <img src="/img/3.png" alt="" class="image" />
+                <img src="img/3.png" alt="" class="image" />
               </div>
             </div>
             <div class="slide">
@@ -239,7 +239,7 @@
                 </div>
               </div>
               <div class="image-container"> 
-                <img src="/img/4.png" alt="" class="image" />
+                <img src="img/4.png" alt="" class="image" />
               </div>
             </div>
           </div>
@@ -301,7 +301,7 @@
     <div class="gridcont">
       <div class="grid1">
         <div class="sldturrasrocka">
-          <img src="/img/uuu.jpg" alt="" title="">
+          <img src="img/uuu.jpg" alt="" title="">
         </div>
       </div>
       <div class="grid2"></div>
