--- a/index.html
+++ b/index.html
@@ -428,9 +428,9 @@
   
   
 
-<script src="/JS/jquery.min.js"></script>
-<script src="/JS/TweenMax.js"></script>
-<script src="/JS/sait.js"></script>
+<script src="JS/jquery.min.js"></script>
+<script src="JS/TweenMax.js"></script>
+<script src="JS/sait.js"></script>
 
 </body>
 </html>
