--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
         text-align: center;
         margin-left: 63px;
     ">Оформить тур в росрочку</h3>
-        <img src="https://vivid-travel.kz/qww.png" style="
+        <img src="https://vivid-travel.kz/qww12.png" style="
     height: 122px;
     width: 88px;
     position: absolute;
